{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 120,
  "lineage": "d8cb3ada-861b-2de1-7960-072b92b38d3b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986773187161:internet-gateway/igw-05e52cbbd03575187",
            "id": "igw-05e52cbbd03575187",
            "owner_id": "986773187161",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-igw",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-igw",
              "Project": "MecanicaOS"
            },
            "vpc_id": "vpc-0c55d1db6febf7420"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986773187161:route-table/rtb-0541245e3aac8bca3",
            "id": "rtb-0541245e3aac8bca3",
            "owner_id": "986773187161",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e52cbbd03575187",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mecanicaos-rt-public",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-rt-public",
              "Project": "MecanicaOS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c55d1db6febf7420"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "986773187161",
            "id": "rtb-0541245e3aac8bca3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f6d7ba8940b79e6",
            "region": "us-east-1",
            "route_table_id": "rtb-0541245e3aac8bca3",
            "subnet_id": "subnet-02d1b9fffe452bb97"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0425c0e1cd2a05bce",
            "region": "us-east-1",
            "route_table_id": "rtb-0541245e3aac8bca3",
            "subnet_id": "subnet-03b37d0cabccf3d46"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0690d0993b2f75094",
            "region": "us-east-1",
            "route_table_id": "rtb-0541245e3aac8bca3",
            "subnet_id": "subnet-0f8c57a16ebe4853f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986773187161:security-group/sg-079defc8fb5ab315a",
            "description": "Security group para EKS e services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079defc8fb5ab315a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mecanicaos-sg",
            "name_prefix": "",
            "owner_id": "986773187161",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mecanicaos-sg",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-sg",
              "Project": "MecanicaOS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c55d1db6febf7420"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "986773187161",
            "id": "sg-079defc8fb5ab315a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986773187161:subnet/subnet-02d1b9fffe452bb97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d1b9fffe452bb97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986773187161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-subnet-1",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-subnet-1",
              "Project": "MecanicaOS"
            },
            "vpc_id": "vpc-0c55d1db6febf7420"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "986773187161",
            "id": "subnet-02d1b9fffe452bb97",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986773187161:subnet/subnet-03b37d0cabccf3d46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b37d0cabccf3d46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986773187161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-subnet-2",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-subnet-2",
              "Project": "MecanicaOS"
            },
            "vpc_id": "vpc-0c55d1db6febf7420"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "986773187161",
            "id": "subnet-03b37d0cabccf3d46",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986773187161:subnet/subnet-0f8c57a16ebe4853f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8c57a16ebe4853f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986773187161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-subnet-3",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-subnet-3",
              "Project": "MecanicaOS"
            },
            "vpc_id": "vpc-0c55d1db6febf7420"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "986773187161",
            "id": "subnet-0f8c57a16ebe4853f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:986773187161:vpc/vpc-0c55d1db6febf7420",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc2031e6236f2632",
            "default_route_table_id": "rtb-0ec36ab20645808b0",
            "default_security_group_id": "sg-0ac90c6eae5c0f6e2",
            "dhcp_options_id": "dopt-0a0a7ef8c0dd17724",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c55d1db6febf7420",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec36ab20645808b0",
            "owner_id": "986773187161",
            "region": "us-east-1",
            "tags": {
              "Name": "mecanicaos-vpc",
              "Project": "MecanicaOS"
            },
            "tags_all": {
              "Name": "mecanicaos-vpc",
              "Project": "MecanicaOS"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "986773187161",
            "id": "vpc-0c55d1db6febf7420",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}